08-jenkins/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: default
  name: jenkins
  labels:
    app.kubernetes.io/instance: jenkins

spec:
  selector:
    app: jenkins
  ports:
  - port: 8280
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
